full coverage and support

--- a/spec/fixtures/templates/link_to.html.haml
+++ b/spec/fixtures/templates/link_to.html.haml
@@ -3,6 +3,6 @@
 = link_to('http://example3.org') do
   Hello World
 = link_to('http://example4.org') do
-  = image_tag('http://example.org/sample.jpg')
+  = image_tag('http://example.org/sample.jpg').html_safe
 = link_to('http://example5.org') do
-  = image_tag('sample.jpg')
+  = image_tag('sample.jpg').html_safe
